--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -144,11 +144,12 @@
 
 .profile-page-user-stats-data-row-1 {
     padding: 12px;
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(4, 1fr);
     /* flex-direction: column; */
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
     /* gap: 12px; */
     border-radius: 12px;
     /* background-color: #e4e4e4; */
@@ -158,6 +159,7 @@
     
     /* padding: 50px; */
     display: flex;
+    padding: 10px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -180,16 +182,17 @@
 
 .profile-page-user-stats-data-row-2 {
     padding: 12px;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     grid-template-columns: repeat(4, 200px);
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     /* gap: 12px; */
     border-radius: 12px;
 }
 
 .profile-page-user-stats-data-row-2 > div {
-    /* padding: 45px; */
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
