--- a/ChainLink-Client/src/styles/rides-feed.css
+++ b/ChainLink-Client/src/styles/rides-feed.css
@@ -17,8 +17,12 @@
     gap: 24px;
 }
 
+.rides-feed-filters-container {
+    width: 280px;
+}
 
 .rides-feed-filters {
+    display: block;
     padding: 24px;
     max-height: none;
     max-width: 300px;
@@ -28,6 +32,7 @@
     top: 48px;
     margin-bottom: 48px;
 }
+
 .rides-feed-filters h4 {
     margin-bottom: 12px;
 }
@@ -122,14 +127,29 @@
     border: 0.5px solid rgba(0, 0, 0, 0.114);
 }
 
+.desktop-filter-heading {
+    display: block;
+}
+
+/* Filters dropdown for mobile */
+.mobile-filter-toggle-button {
+    display: none;
+}
+
+/* Container for filters and toggle */
+.rides-feed-filters-container {
+    width: 100%;
+}
+  
 /* Results */
 
 .rides-feed-results {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    flex-grow: 1;
+    width: calc(100% - 280px - 24px);
 }
-
 
 .rides-feed-header {
     display: flex;
@@ -151,29 +171,71 @@
     font-weight: 400;
 }
 
-
-
-
 .rides-feed-rides {
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
 
-
-
-
-
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 768px) {
     .rides-feed-grid {
-        padding: 0px;
+        display: block;
+        max-width: 100%;
         flex-direction: column;
     }
+    .rides-feed-filters-container {
+        width: 280px;
+        margin-bottom: 16px;
+    }
+    .desktop-filter-heading {
+        display: none;
+    }
+    .mobile-filter-toggle-button {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 280px;
+        background-color: #f8f8f8;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+        padding: 12px;
+        font-size: 1em;
+        cursor: pointer;
+    }
+    .mobile-filter-toggle-button.active {
+        border-bottom: none;
+        border-radius: 6px 6px 0 0;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+      }      
+    .chevron-icon {
+        display: flex;
+        align-items: center;
+        margin-left: auto;
+    }
+    
+    .chevron-icon.up {
+        transform: rotate(180deg);
+    }
+    
+    .chevron-icon.down {
+        transform: rotate(0deg);
+    }
     .rides-feed-filters {
-        min-width: 100%;
-        position: inherit;
-        max-height: none;
+        display: none;
+    }
+
+    .rides-feed-filters.visible {
+        display: block;
+        position: static;
+        width: 280px;
+        margin: 0 auto;
         padding: 0px;
+        background-color: #f8f8f8;
+        border: 1px solid #ccc;
+        border-top: none;
+        border-radius: 0 0 6px 6px;
+        padding: 16px;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
     .rides-feed-filters > h4 {
         grid-column: span 2;
